initial design layout

--- a/web_app/word_predictor/templates/index.html
+++ b/web_app/word_predictor/templates/index.html
@@ -65,9 +65,9 @@
         
         <!-- Hero image -->
         <div class="hero-container full-width show-on-mobile pt1 pl2 pr2">
-            <div class="hero full-width full-height" style="background:rgba(0,0,0,0) url(./static/img/1.jpg) no-repeat scroll center center/cover"></div>
+            <div class="hero full-width full-height" style="background: rgba(0, 0, 0, 0) url(/static/img/1.jpg) no-repeat scroll center center/cover;"></div>
         </div>
-        <div class="hide-on-mobile hero" style="background:rgba(0,0,0,0) url(./static/img/1.jpg) no-repeat scroll center center/cover"></div>
+        <div class="hide-on-mobile hero" style="background:rgba(0,0,0,0) url(/static/img/1.jpg) no-repeat scroll center center/cover"></div>
 
         <!-- Body -->
         <div class="body full-width pt1 pr2 pb2 pl2">
@@ -76,8 +76,8 @@
                 <ul class="no-bullets list--inline pb1 bold">
                     <li class="small mr2"><a class="link link--text current" href="/home">Who We Are</a></li>
                     <li class="small mr2"><a class="link link--text" href="/word_prediction">Word Predictor</a></li>
-                    <li class="small mr2"><a class="link link--text" href="./pricing.html">Pricing</a></li>
-                    <li class="small"><a class="link link--text" href="./contact.html">Contact</a></li>
+                    <li class="small mr2"><a class="link link--text" href="">Pricing</a></li>
+                    <li class="small"><a class="link link--text" href="">Contact</a></li>
                 </ul>
             </nav>
             <!-- Page Content -->
