front end changes

--- a/web_app/word_predictor/templates/index.html
+++ b/web_app/word_predictor/templates/index.html
@@ -53,7 +53,7 @@
 
             <!-- Desktop header -->
             <!-- Desktop logo -->
-            <h1 class="hide-on-mobile logo-container absolute block full-width align--center"><img class="logo--desktop" src="./static/img/desktop-logo.png" alt="WordWise" title="WordWise"></h1>
+            <h1 class="hide-on-mobile logo-container absolute block full-width align--center"><img class="logo--desktop" src="{% static 'img/desktop-logo.png' %}" alt="WordWise" title="WordWise"></h1>
             <!-- Social links -->
             <ul class="pt1 no-bullets align--center hide-on-mobile">
                 <li><a class="link link--default" href="https://www.twitter.com"><img class="icon" src="{% static 'img/facebook.svg' %}" alt="Facebook"></a></li>
