--- a/web_app/word_predictor/templates/word_prediction_tool.html
+++ b/web_app/word_predictor/templates/word_prediction_tool.html
@@ -157,7 +157,7 @@
             </main> -->
                         <!-- Footer -->
             <footer class="border--top pt1 pb1">
-                <p class="text--gray small mb0">&copy; Copyright WordWise | Design by <a href="https://www.eatapapaya.com" class="link link--text">Papaya</a>.</p>
+                <p class="text--gray small mb0">&copy; Copyright WordWise | Design by <a href="" class="link link--text">Team Predictive Linguists</a>.</p>
             </footer>
         </div><!-- end Body -->
 
